Sender option. Debug

--- a/process_messenger_config.json
+++ b/process_messenger_config.json
@@ -3,5 +3,6 @@
   "ssh": "username@host",
   "mailing_list": ["local-part@domain"],
   "n_log_lines": 10,
-  "full_log": false
+  "full_log": false,
+  "sender": "local-part@domain"
 }
